--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="content">
         <h3 class="neon">ERIS GALAXY</h3>
         <p class=""> Is the first game in a trilogy of free to play and invest to earn games that will open the doors to a metaverse, which will challenge its players by encouraging them to team up, organize, build and fight their way into unknown territories.</p>
-        <p>Smart Contract 0x24580224d767t8gyu78....</p>
+        <!--<p>Smart Contract 0x24580224d767t8gyu78....</p>-->
         <br >
         <a href="#" class="btn">Marketplace</a>
         <a href="#" class="btn">DApp</a>
@@ -92,7 +92,7 @@
     </div>
     </div>
     
-    <div class="portada" id="portada">
+    <!--<div class="portada" id="portada">
         <div class="aviso">
             <hr>                                                                
             <p class="mensaje">Próximamente</p>
@@ -102,7 +102,7 @@
           <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
           <script src="simplyCountdown.min.js"></script>
           <script src="countdown.js"></script>
-    </div>
+    </div>-->
 
  
         <div class="burbujas">
@@ -133,23 +133,21 @@
 
     <h1 class="heading"> The <span>History</span> </h1>
 
-    <!--<div class="box-container">
-        
-
+   <div class="box-container">
         <div class="box">
             <img class="image" src="images/vide.png" width="100" height="100" alt="">
             <div class="content">
-                <img src="images/273.png" alt="">
-                <h3>HISTORY</h3>
-                <p>En este infinito universo, habitan sin fines de especies, pero hay ciertas razas de diferentes planetas que, aunque quisieran estar en paz, eso ya no podría ser posible. Debido a que algo estaba a punto de suceder al margen de ellos, y aunque quisieran estar en paz, no podrían conseguirla tan fácilmente, pues, pronto tendrían que compartir un mismo destino.</p>
+                <p>Con la llegada del orden, el CAOS tuvo que equilibrar la balanza del destino, así se decidió desde un comienzo. Una profecía hablaba que el caos, que una vez fue encerrado, iba a resurgir mas poderoso que nunca, destruyendo todo a su paso. Es por ello que ahora estas razas: Humanos, Clasumas, Streps, Flowlings y Ruts, se vieron amenazadas por tal mounstrosidad, y se vieron obligadas a unir fuerzas para que volviera el orden en la galaxia.</p>
+                <hr>
             </div>
         </div>
-    </div>-->
-    <div class="noticia">
-        <img class="izquierda" src="images/vide.png" width="400" height="400" alt="">
-        <aside>En este infinito universo, habitan sin fines de especies, pero hay ciertas razas de diferentes planetas que, aunque quisieran estar en paz, eso ya no podría ser posible. Debido a que algo estaba a punto de suceder al margen de ellos, y aunque quisieran estar en paz, no podrían conseguirla tan fácilmente, pues, pronto tendrían que compartir un mismo destino.</aside>
+    </div>
+     <!--<div class="noticia">
+        <img class="izquierda" src="images/vide.png" width="1100" height="600" alt="">
+        <aside>La disputa entre el orden y el caos marco una profecía en el comienzo de los tiempos. 
+            Durante los años venideros fue comunicándose dicha profecía por generaciones, aunque en algunos casos fue perdiéndose en el camino debido a la falta de creencia de la misma. Milenios tuvieron que pasar para que sucediera lo inevitable: Murieron infinidad de seres de diferentes planetas, extinguiéndose en muchos casos especies completas, dejando sentimientos de tristeza, furia y venganza en el corazón de los sobrevivientes. Pero aquellos que lograron salvarse ahora se ven obligados a unir sus fuerzas, sin importar su sangre, para combatir contra aquella amenaza que atenta contra sus vidas, sus mundos y el mismísimo universo. Es momento de enfrentarse al mayor desafío de sus vidas. Humanos, Clasumas, Streps, Flowlings, Ruts, ninguna raza estaba preparada para esto, pero ha llegado el momento de la batalla final por la supervivencia, y para derrocar al fin aquel CAOS: Los Grimers.</aside>
         <div class="reset"></div>
-      </div>
+      </div>-->
 </section>
 
 <!-- HISTORY section ends -->
