--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="content">
         <h3 class="neon">ERIS GALAXY</h3>
         <p class=""> Is the first game in a trilogy of free to play and invest to earn games that will open the doors to a metaverse, which will challenge its players by encouraging them to team up, organize, build and fight their way into unknown territories.</p>
-        <p>Smart Contract 0x24580224d767t8gyu78....</p>
+       <!-- <p>Smart Contract 0x24580224d767t8gyu78....</p>-->
         <br >
         <a href="#" class="btn">Marketplace</a>
         <a href="#" class="btn">DApp</a>
