--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
             </svg>
             <a href="https://t.me/+DSPyNR9LqYk5N2Nh" target="_blank" class="btn-red-social"><i class="fab fa-telegram"></i></a>
         </div>
+
+        <div class="icon">
+            <svg heigth="80" width="80">
+                <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none" ></circle>
+            </svg>
+            <a href="https://discord.gg/9CDkv4svYv" target="_blank" class="btn-red-social"><i class="fab fa-discord"></i></a>
+        </div>
         </main>
     </div>
     </div>
@@ -138,19 +145,15 @@
 
    <div class="box-container">
         <div class="box">
-            <img class="image" src="images/vide.png" width="100" height="100" alt="">
+            <div class="video">
+            <iframe width="1060" height="615" src="https://www.youtube.com/embed/_ThFrLS6HMM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
             <div class="glit">
                 <p>With the arrival of order, the CHAOS had to balance the scales of destiny, so it was decided from the beginning. A prophecy spoke that the chaos, which was once enclosed, was going to resurface more powerful than ever, destroying everything in its path. That is why now these races: Humans, Clasumas, Streps, Flowlings and Ruts, were threatened by such monstrosity, and were forced to join forces to bring order back to the galaxy.</p>
                 <hr>
             </div>
         </div>
     </div>
-     <!--<div class="noticia">
-        <img class="izquierda" src="images/vide.png" width="1100" height="600" alt="">
-        <aside>La disputa entre el orden y el caos marco una profecía en el comienzo de los tiempos. 
-            Durante los años venideros fue comunicándose dicha profecía por generaciones, aunque en algunos casos fue perdiéndose en el camino debido a la falta de creencia de la misma. Milenios tuvieron que pasar para que sucediera lo inevitable: Murieron infinidad de seres de diferentes planetas, extinguiéndose en muchos casos especies completas, dejando sentimientos de tristeza, furia y venganza en el corazón de los sobrevivientes. Pero aquellos que lograron salvarse ahora se ven obligados a unir sus fuerzas, sin importar su sangre, para combatir contra aquella amenaza que atenta contra sus vidas, sus mundos y el mismísimo universo. Es momento de enfrentarse al mayor desafío de sus vidas. Humanos, Clasumas, Streps, Flowlings, Ruts, ninguna raza estaba preparada para esto, pero ha llegado el momento de la batalla final por la supervivencia, y para derrocar al fin aquel CAOS: Los Grimers.</aside>
-        <div class="reset"></div>
-      </div>-->
 </section>
 
 <!-- HISTORY section ends -->
@@ -180,6 +183,7 @@
           <p>This mode can be played both as a “normal game” and as a “ranked game”.</p>
           <a href="#" class="btn">WATCH</a>
         </div>
+
     </div>
   
       <script src="gameplay.js"></script>
@@ -299,11 +303,16 @@
         <section class="steps">
     
             <div class="box">
-                <img src="images/nom.jpeg" width="300" height="300" alt="">
+                <div class="img1">
+                    <img src="images/nom.jpeg" width="400" height="400" alt="">
+                </div>
                 <div class="glit">
                     <br>
                     <br>
+                    <br>
                     <h3>CAOS Tokenomics</h3>
+                    <br>
+                    <br>
                     <br>
                     <br>
                     <br>
@@ -505,8 +514,13 @@
 <!-- order section starts  -->
 
 <section class="order" id="order">
-    <h1 class="heading "><span></span></h1>
+
    <h1 class="heading "><span>Part</span>ner</h1>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
 
     <div class="row">
         
@@ -515,11 +529,11 @@
                 <img src="./images/binance.png" alt="">           
             </div>
 
-            <div class="imagen">
-                <img src="./images/unreal.png"  width="100" height="400" alt="">             
+            <div class="imagen1">
+                <img src="./images/ur.jpg" alt="">             
            </div>
 
-           <div class="imagen">
+           <div class="imagen2">
             <img src="./images/metamask2.png"alt=""> 
            </div>                      
        </div>
@@ -537,6 +551,7 @@
         <a href="https://twitter.com/GalaxyEris" target="_blank" class="btn">twitter</a>
         <a href="https://www.instagram.com/erisgalaxyofficial/?hl=es-la" target="_blank" class="btn">instagram</a>
         <a href="https://t.me/+DSPyNR9LqYk5N2Nh" target="_blank" class="btn">Telegram</a>
+        <a href="https://discord.gg/9CDkv4svYv" target="_blank" class="btn"> Discord</a>
     </div>
 
     <h1 class="credit"> created by <span> OrbeGameStudios </span> | all rights reserved! </h1>
