--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!---title logo icon-->
+    <link rel="shortcut icon" href="images/eris_Galaxy_icon.ico" />
     <title>ErisGalaxy</title>
 
     <!-- font awesome cdn link  -->
