--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             <div class="content">
                 <h3>A29 - DROID MINING</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, ipsum.</p>
-                <a href="#" class="btn">Buy now</a>
+                <a href="#" class="btn">VER</a>
             </div>
         </div>
         <div class="box">
@@ -363,7 +363,7 @@
             <div class="content">
                 <h3>F19 - DROID MINING</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, ipsum.</p>
-                <a href="#" class="btn">Buy now</a>
+                <a href="#" class="btn">VER</a>
             </div>
         </div>
         <div class="box">
@@ -371,7 +371,7 @@
             <div class="content">
                 <h3>Y31 - DROID MINING</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, ipsum.</p>
-                <a href="#" class="btn">Buy now</a>
+                <a href="#" class="btn">VER</a>
             </div>
         </div>
         <div class="box-none">
@@ -382,7 +382,7 @@
             <div class="content">
                 <h3>M29 - DROID MINING</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, ipsum.</p>
-                <a href="#" class="btn">Buy now</a>
+                <a href="#" class="btn">VER</a>
             </div>
         </div>
         <div class="box-none ">
@@ -501,7 +501,7 @@
                         <img src="images/team/marco 2k.png" alt="">
                     </div>
                     <div class="details">
-                        <h3>Ken Otoya c<br><span>Fullstack Engineer </span></h3>
+                        <h3>Kenny Otoya<br><span>Fullstack Engineer </span></h3>
                         <i class="fab fa-linkedin"></i>
                     </div>
                 </div>
