--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="glit">
           <p class=""> Is the first game in a trilogy of free to play and invest to earn games that will open the doors to a metaverse, which will challenge its players by encouraging them to team up, organize, build and fight their way into unknown territories.</p>
         </div>
-        <!-- <p>Smart Contract 0x24580224d767t8gyu78....</p>-->
+      
         <br >
         <a href="#" class="btn">Marketplace</a>
         <a href="#" class="btn">DApp</a>
@@ -148,7 +148,7 @@
    <div class="box-container">
         <div class="box">
             <div class="video">
-                <iframe width="1060" height="615" src="https://www.youtube.com/embed/OtGTjrMEPt8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="100%" height="615" src="https://www.youtube.com/embed/OtGTjrMEPt8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="glit">
                 <p>With the arrival of order, the CHAOS had to balance the scales of destiny, so it was decided from the beginning. A prophecy spoke that the chaos, which was once enclosed, was going to resurface more powerful than ever, destroying everything in its path. That is why now these races: Humans, Clasumas, Streps, Flowlings and Ruts, were threatened by such monstrosity, and were forced to join forces to bring order back to the galaxy.</p>
@@ -308,7 +308,7 @@
                 <div class="img1">
                     <img src="images/nom.png" width="500" height="500" alt="">
                 </div>
-                <div class="glit">
+                <div class="  glit">
                     <br>
                     <br>
                     <h3>CAOS Tokenomics</h3>
@@ -416,7 +416,8 @@
                         <img src="images/team/Axel.png" alt="">
                     </div>
                     <div class="details">
-                        <h3>Axel Drost<br><span>Game Desinger </span></h3>
+                        <h3>Axel Drost<br><span>
+                            Design Director and Game Desinger </span></h3>
                     </div>
                 </div>
                 <div class="columm">
@@ -502,7 +503,15 @@
                         <i class="fab fa-linkedin"></i>
                     </div>
                 </div>
-                <div class="none"></div>
+                <div class="columm">
+                    <div class="imgBox">
+                        <img src="images/team/mariano.png" alt="">
+                    </div>
+                    <div class="details">
+                        <h3>Mariano Dell Aquila <br><span>Blockchain Development </span></h3>
+                        <i class="fab fa-linkedin"></i>
+                    </div>
+                </div>
             </div>            
         </div>
     </div>
@@ -514,7 +523,7 @@
 
 <section class="order" id="order">
 
-   <h1 class="heading neon"><span>TECHNO</span>LOGIES</h1>
+   <h1 class="heading neon">TECHNOLOGIES</h1>
    <br>
    <br>
    <br>
