--- a/index.html
+++ b/index.html
@@ -428,6 +428,14 @@
                         <h3>Paola Noriega <br><span>Character Designer </span></h3>
                     </div>
                 </div>
+                <div class="columm">
+                    <div class="imgBox">
+                        <img src="images/team/Nahel.png" alt="">
+                    </div>
+                    <div class="details">
+                        <h3>Nahel <br><span>Character Designer </span></h3>
+                    </div>
+                </div>
                 
 
             </div>
