--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- custom css file link  -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="team.css">
+    <link rel="stylesheet" href="cards.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
@@ -389,6 +390,19 @@
             
         </div>
 
+    </div>
+
+    <div class="contenedor">
+        <div class="contenedor_tarjeta">
+            <figure id="tarjeta">
+                <img src="images/A29.png" class="frontal">
+                <figcaption class="trasera">
+                    <h2 class="titulo">A29 - DROID MINING</h2>
+                    <hr>
+                    <p></p>
+                </figcaption>
+            </figure>
+        </div>
     </div>
 </section>
 
