--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                         <figcaption class="trasera">
                             <h2 class="titulo">A29 - DROID MINING</h2>
                             <hr>
-                            <p>Poder de minado 1600</p>
+                           <!-- <p>Poder de minado 1600</p>-->
                         </figcaption>
                     </figure>
                 </a>
@@ -424,7 +424,7 @@
                         <figcaption class="trasera">
                             <h2 class="titulo">M29 - DROID MINING</h2>
                             <hr>
-                            <p>Poder de minado 800</p>
+                            <!--<p>Poder de minado 800</p>-->
                         </figcaption>
                     </figure>
                 </a>
@@ -438,7 +438,7 @@
                         <figcaption class="trasera">
                             <h2 class="titulo">F19 - DROID MINING</h2>
                             <hr>
-                            <p>Poder de minado 400</p>
+                            <!--<p>Poder de minado 400</p>-->
                         </figcaption>
                     </figure>
                 </a>
@@ -452,7 +452,7 @@
                         <figcaption class="trasera">
                             <h2 class="titulo">Y31 - DROID MINING</h2>
                             <hr>
-                            <p>Poder de minado 200</p>
+                            <!--<p>Poder de minado 200</p>-->
                         </figcaption>
                     </figure>
                 </a>
