--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
     
             <div class="box">
                 <div class="img1">
-                    <img src="images/nom.png"  alt="">
+                    <img src="images/nomi.png"  alt="">
                 </div>
                 <div class="text-box  glit">
                     <br>
