--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <nav class="navbar">
         <a href="#home">home</a>
-        <a href="#speciality">History</a>
+        <a href="#speciality">Metagalaxy</a>
         <a href="#popular">GamePlay</a>
         <a href="#gallery">RoadMap</a>
         <a href="#step">Tokenomics</a>
@@ -145,7 +145,7 @@
 <!-- HISTORY section starts  -->
 <section class="speciality" id="speciality">
 
-    <h1 class="heading neon"> THE <span>HISTORY</span> </h1>
+    <h1 class="heading neon"> <span>METAGALAXY</span> </h1>
 
    <div class="box-container">
         <div class="box">
