--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                     </div>                                        
                     <div class="education">
                         <div class="resume-item">
-                            <p class="res-year">2023</p>
+                            <p class="res-year">2022</p>
                             <ul>
                                 <li>Launch CONQUIST MODE (open world).</li>
                                 <li>New characters within the weirdness.</li>
@@ -507,7 +507,7 @@
                         <img src="images/team/Nahel.png" alt="">
                     </div>
                     <div class="details">
-                        <h3>Nahel <br><span>Character Designer </span></h3>
+                        <h3>Nahuel Toro<br><span>Character Designer </span></h3>
                     </div>
                 </div>
                 
