--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <svg heigth="80" width="80">
                 <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none" ></circle>
             </svg>
-            <a href="https://t.me/+DSPyNR9LqYk5N2Nh" target="_blank" class="btn-red-social"><i class="fab fa-telegram"></i></a>
+            <a href="https://t.me/ErisGalaxyc" target="_blank" class="btn-red-social"><i class="fab fa-telegram"></i></a>
         </div>
 
         <div class="icon">
