--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <svg heigth="80" width="80">
                 <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none" ></circle>
             </svg>
-            <a href="https://t.me/ErisGalaxyc" target="_blank" class="btn-red-social"><i class="fab fa-telegram"></i></a>
+            <a href="https://t.me/erisGalaxyCo" target="_blank" class="btn-red-social"><i class="fab fa-telegram"></i></a>
         </div>
 
         <div class="icon">
@@ -251,18 +251,18 @@
                         <div class="resume-item">
                             <p class="res-year">2022</p>
                             <ul>
-                                <li>Launch of the website.</li>
-                                <li>Trailer.</li>
-                                <li>Creation of Smart Contracts.</li>
-                                <li>PRE PRIVATE AND PUBLIC SALE.</li>
+                                <li>Webpage launch.</li>
+                                <li>ERIS GALAXY trailer launch.</li>
+                                <li>Smart Contracts creation.</li>
+                                <li>PRIVATE AND PUBLIC presale.</li>
                                 <li>Pancakeswap list.</li>
-                                <li>Creation of the DAPP.</li>
-                                <li>Pre-sale of NFT.</li>
-                                <li>Launch DAPP (Staking NFT).</li>
-                                <li>Opening of the Marketplace.</li>
-                                <li>Release of the game trailer.</li>
-                                <li> Pre-sale characters by races.</li>
-                                <li>Private beta of the game.</li>                            
+                                <li>DAPP creation and launch.</li>
+                                <li>NFT ROBOTS (STATKING).</li>
+                                <li>NFT staking presale.</li>
+                                <li>Characters by race presale.</li>
+                                <li>Marketplace opening.</li>
+                                <li>Private game Beta: ALL VS GRIMER.</li>
+                                <li>Public game beta launch.</li>                            
                             </ul>
                         </div>
                     </div>
@@ -276,9 +276,9 @@
                         <div class="resume-item">
                             <p class="res-year">2022</p>
                             <ul>
-                                <li>Public beta release: SPACE SURVIVAL.</li>
+                                <li>Launch: 2 vs 2 vs 2 vs GRIMER and ALL vs ALL.</li>
                                 <li>Farm 2.0.</li>
-                                <li>Scholarship System.</li>
+                                <li>Grants System.</li>
                                 <li>Coinmarketcap.</li>
                             </ul>
                         </div>
@@ -293,9 +293,9 @@
                         <div class="resume-item">
                             <p class="res-year">2022</p>
                             <ul>
-                                <li>Launch CONQUIST MODE (open world).</li>
-                                <li>New characters within the weirdness.</li>
-                                <li>Mobile app for PVE and PVP (iOs and Android).</li>
+                                <li>CONQUEST MODE launch (open world).</li>
+                                <li>New characters among the quaintness.</li>
+                                <li>Mobile App for PVE and PVP (iOs and Android).</li>
                             </ul>
                         </div>
                     </div>
