--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
                     </div>
                     <div class="details">
                         <h3>Kenny Otoya<br><span>Fullstack Engineer </span></h3>
-                        <a href="" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/kenny-misael-otoya-flores-359749b3/" target="_blank"><i class="fab fa-linkedin"></i></a>
                     </div>
                     </a>
                 </div>
