--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
     <link rel="stylesheet" href="card.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 
-
+    <meta name="description" content="Game NFT Metaverse"/>
+    <link rel="canonical" href="https://erisgalaxy.com">
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="ERIS GALAXY NFT Play to earn "/>
+    <meta property="og:description" content="Game NFT Play to earn Metaverse of NFT Ner Future  "/>
+    <meta property="og:url" content="www.erisgalaxy.com "/>
+    <meta property="og:site_name" content="ERIS GALAXY - NFT GAME "/>
 </head>
 <body>
     
